Project/p4/tests/t063.err
Semantic error on line 1: Arithmetic divide by zero at parse time. Using zero as the result so parse can continue.
