Project/p4/tests/t063.gpl
int i = 12/0;
